# argentea

./: Cargo.toml  README.md  io.github.Argentea.json  meson.build
.flatpak/: cargo.sh  rust-analyzer.sh
.flatpak/flatpak-builder/checksums/: x86_64-io.github.Argentea.json
data/: io.github.Argentea.desktop.in  io.github.Argentea.gschema.xml  io.github.Argentea.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.rs  argentea.gresource.xml  config.rs  main.rs  meson.build  window.rs
src/add_screenshot_tile/: imp.rs  mod.rs
src/app_context_bar/: imp.rs  mod.rs
src/app_editor/: imp.rs  mod.rs
src/app_preview/: imp.rs  mod.rs
src/app_version_history_row/: imp.rs  mod.rs
src/app_version_row/: imp.rs  mod.rs
src/core/: tools.rs
src/description_box/: imp.rs  mod.rs
src/license_tile/: imp.rs  mod.rs
src/lozenge/: imp.rs  mod.rs
src/screenshot_tile/: imp.rs  mod.rs
src/ui/: add-screenshot-tile.blp  app-context-bar.blp  app-editor.blp  app-preview.blp  app-version-history-row.blp  app-version-row.blp  description-box.blp  license-tile.blp  screenshot-tile.blp  style.css  window.blp
