[package]
name = "argentea"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_14", "blueprint"] }
sourceview5 = "0.9.0"

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]
