[package]
name = "argentea"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
walkdir = "2.3.2"
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_14", "blueprint"] }
sourceview5 = "0.9.0"
home = "0.5.9"
reqwest = "0.12.7"
html2pango = "0.6.0"
appstream = "0.2.2"
xmltree = "0.10.3"
async-channel = "2.3.1"
tokio = { version = "1", features = ["rt-multi-thread"] }
csscolorparser = "0.7.0"

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]
